--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.66.4",
+    "react-native-cli": "^2.0.1",
+    "react-native-web": "^0.17.5",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
