--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-native": "^0.66.4",
     "react-native-cli": "^2.0.1",
+    "react-native-elements": "^3.4.2",
     "react-native-web": "^0.17.5",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
